# reproduce-issues

./: ingress.yaml  kind-config.yaml  setup.sh  traefik-values.yaml
sqlx-multithreading/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  sqlx-data.json
sqlx-multithreading/src/: main.rs
traefik-psql-ingress/: README.md  ingress.yaml  postgres.yaml  setup.sh  traefik-values.yaml
